--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,260 @@
-/* font-family: 'Sen', sans-serif;
-font-family: 'Tilt Neon', cursive; */
+* {
+  padding: 0;
+  margin: 0;
+}
+:root {
+  --yellow: #ffbc03;
+  --grey: #555;
+  --neon: "Tilt Neon", cursive;
+}
+body {
+  width: 100%;
+  font-family: "Sen", sans-serif;
+}
+main {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+h1,
+h2,
+h3 {
+  font-family: var(--neon);
+}
+header {
+  padding: 5%;
+  height: 280px;
+  background-image: url(../images/header.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0px;
+  color: white;
+  text-shadow: 0px 5px 10px black;
+}
+header img {
+  width: 50px;
+}
+.header-text {
+  width: 80%;
+}
+header div div h2:nth-child(2) {
+  font-size: 30px;
+}
+h1 {
+  font-size: 45px;
+  color: var(--yellow);
+  margin-bottom: 10px;
+}
+header div div h2:nth-child(3) {
+  font-size: 15px;
+  text-transform: lowercase;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+}
+header p {
+  width: 75%;
+  opacity: 0.8;
+}
+header a {
+  display: none;
+}
+nav a:nth-child(1),
+nav a:nth-child(2),
+nav a:nth-child(4),
+nav a:nth-child(6) {
+  display: none;
+}
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin: 5px auto;
+  background-color: var(--yellow);
+}
+nav a {
+  width: 150px;
+  padding: 10px 0;
+  background-color: white;
+  border-radius: 30px;
+  text-align: center;
+  margin: 10px auto;
+  font-size: 20px;
+  text-decoration: none;
+  color: var(--grey);
+  font-weight: 800;
+}
+.onas > div:first-child {
+  height: 200px;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+.onas div img {
+  width: 100%;
+  transform: translateY(-40px);
+}
+.onas-text h2 {
+  font-family: var(--neon);
+  text-align: center;
+  color: var(--yellow);
+}
+.onas-text p {
+  text-align: center;
+  color: var(--grey);
+  padding: 5%;
+}
+.rozdzielacz {
+  width: 100%;
+  height: 5px;
+  background-color: var(--yellow);
+  margin-bottom: 20px;
+}
+.menu {
+  padding: 0 5%;
+}
+.menu h3 {
+  text-align: center;
+  color: var(--grey);
+  font-size: 20px;
+}
+.menu h2,
+.promocje h2 {
+  text-align: center;
+  color: var(--yellow);
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+ul {
+  margin: 20px 0;
+  line-height: 30px;
+}
+ul li:nth-child(even) {
+  background-color: var(--yellow);
+}
+li {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0 10px;
+}
+ul li p {
+  display: inline-block;
+}
+.button2-zamowienie {
+  box-sizing: border-box;
+  display: inline-block;
+  width: 100%;
+  background-color: var(--grey);
+  color: white;
+  text-decoration: none;
+  padding: 20px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 800;
+}
+.promocje {
+  box-sizing: border-box;
+  padding: 5%;
+  margin: 0 auto;
+  text-align: center;
+}
+.promocje p {
+  margin: 10px;
+  color: var(--grey);
+}
+.stolat,
+.zoltyser {
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+}
+.stolat {
+  border: 2px solid var(--grey);
+}
+.stolat h3:first-child,
+.zoltyser h3:first-child {
+  font-size: 25px;
+  text-decoration: underline;
+}
+.stolat h3:nth-child(3),
+.zoltyser h3:nth-child(3) {
+  color: red;
+}
+.zoltyser {
+  border: 2px solid var(--yellow);
+}
+.zamowienie {
+  box-sizing: border-box;
+  width: 100%;
+  height: 200px;
+  background-image: url(../images/zamowienie.jpg);
+  background-repeat: no-repeat;
+  background-size: 250%;
+  background-position: right;
+  text-align: right;
+  padding: 35px 30px;
+  color: white;
+  text-shadow: 0px 5px 10px black;
+}
+.zamowienie p {
+  width: 50%;
+  margin: 10px 0 0 auto;
+}
+.zamowienie h3 {
+  font-weight: 400;
+}
+.zamowienie h2 {
+  letter-spacing: 2px;
+}
+.img-adres {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  margin-bottom: 5px;
+}
+.img-adres img {
+  width: 100%;
+  transform: translateY(-50px);
+}
+.adres h2 {
+  text-align: center;
+  margin-top: 20px;
+  color: var(--yellow);
+}
+.text-adres p {
+  padding: 20px;
+  color: var(--grey);
+  text-align: center;
+}
+footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+  margin: 5px auto;
+  background-color: var(--yellow);
+}
+.button-footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin: 5px auto;
+  background-color: var(--yellow);
+}
+footer a {
+  display: inline-block;
+  width: 150px;
+  padding: 10px 0;
+  background-color: white;
+  border-radius: 30px;
+  text-align: center;
+  margin: 20px auto;
+  font-size: 20px;
+  text-decoration: none;
+  color: var(--grey);
+  font-weight: 800;
+}
+footer p {
+  margin-bottom: 10px;
+}
